# API-de-Classification-de-CV-RH-Tech-

./: .gitignore  README.md  main.py  manage.py  pyproject.toml
cvclassifier/: asgi.py  settings.py  urls.py  wsgi.py
resumes/: admin.py  ml_classifier.py  models.py  serializers.py  tests.py  train_model.py  urls.py  utils.py  views.py
resumes/fixtures/: categories.json  jobpostings.json
resumes/migrations/: 0001_initial.py
